now moves on to next question with timer still running

--- a/index.html
+++ b/index.html
@@ -17,12 +17,34 @@
     </header>
 
     <section class = "qBlock">
-        <h2>Code Quiz Challenge</h2>
-        <br>
-        <p>nia f eafib iafuaniu fuanu iafniu iaf un no</p>
-        <br>
-        <button id="startButton">Start Quiz</button>
-
+        <div id = "intro">
+            <h2>Code Quiz Challenge</h2>
+            <br>
+            <p>nia f eafib iafuaniu fuanu iafniu iaf un no</p>
+            <br>
+            <button id="startButton">Start Quiz</button>
+        </div>
+        
+        <div class = "questions">
+            <div id = "qOne">
+                <h2>What color is the tounge of a giraffe</h2>
+                <ul>
+                    <li>
+                        Red
+                    </li>
+                    <li>
+                        Blue
+                    </li>
+                    <li>
+                        Yellow
+                    </li>
+                    <li>
+                        Pink
+                    </li>
+                </ul>
+            </div>
+        </div>
+        
     </section>
     <script src="./assets/js/script.js"></script>
 </body>
